Qute i18n: attempt to resolve ambiguity for multiple localized files
- resolves #47585